[package]
name = "led-tilt"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-v2 = "0.15.1"
cortex-m-rt = "0.7.5"
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"
lsm303agr = "1.1.0"
embedded-hal = "1.0.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]
